--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <h1>Hazrat Imam Al-Kazim (a.s)</h1>
             <p>"Anybody Who Fails To Do Research And Investigtion In His Religion Allah Will Not Be Satisifed With His
                 Activities"</p>
-            <p>(Biharul Anwar Vol 17 Pg 253)</p>
+            <p>(Biharul Anwar, Vol 17, Pg 253)</p>
             <div class="banner-btn">
                 <a href="#about"><span></span>About Us</a>
                 <a href="#purpose"><span></span>Purpose</a>
+                 <img src="img/wave-img.png" class="bottom-img">
             </div>
     </section>
 
