--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Khand:wght@500&family=Noto+Sans+Display:wght@700&family=Poppins:wght@500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/93eee5c968.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
     <section id="banner">
-        <a href="#banner"><img src="img/logo 1.png" class="logo"></a>
+        <a href="#banner"><img src="img/20220618_151452.png" class="logo"></a>
 
 
         <div class="banner-text">
@@ -30,9 +30,10 @@
             <div class="banner-btn">
                 <a href="#about"><span></span>About Us</a>
                 <a href="#purpose"><span></span>Purpose</a>
-                 <img src="img/wave-img.png" class="bottom-img">
+                <img src="img/wave-img.png" class="bottom-img">
             </div>
     </section>
+
 
 
     <div id="sideNav">
@@ -152,7 +153,7 @@
                 </div>
             </div>
             <div class="introduction-img">
-                <img src="img/bt.jpg">
+                <img src="img/birth.jpg">
             </div>
         </div>
     </section>
@@ -180,9 +181,6 @@
                             used to do good to all those people who used to do bad with him. And this was his habit
                             which he always performed. But due to the Taqiyya his followers used to call him sometimes
                             And Slih, Faqih, or Scholar.</p><br>
-                        <p>Hazrat’s another most famous title was Babul Hawaij. Because for years people have seen
-                            miracles where people with the worstest disease have been cured. Survival of the Shia faith
-                            is also one of the Miracles of Hazrat Imam Musa Kazim (a.s). </p>
                     </div>
                 </div>
             </div>
@@ -194,6 +192,9 @@
 
     <section id="para">
         <div class="para1">
+            <p>Hazrat’s another most famous title was Babul Hawaij. Because for years people have seen
+                miracles where people with the worstest disease have been cured. Survival of the Shia faith
+                is also one of the Miracles of Hazrat Imam Musa Kazim (a.s). </p><br>
             <p>The explanation of the title of Babul Hawaij is that miracle cures are being seen from his holy tomb
                 since times immemorial till date and some writers have compiled separate books on this subject in which
                 they have compiled these miracles according to eye-witness accounts and the fact is that in Baghdad
@@ -265,7 +266,7 @@
                 </div>
             </div>
             <div class="introduction-img">
-                <img src="img/childhood1.jpg">
+                <img src="img/childh.jpg">
             </div>
         </div>
     </section>
@@ -440,7 +441,7 @@
                     </div>
                 </div>
             </div>
-            <div class="Politicals-img">
+            <div class="introduction-img">
                 <img src="img/pc.jpg">
             </div>
         </div>
@@ -622,7 +623,7 @@
                     </div>
                 </div>
             </div>
-            <div class="Proofs-img">
+            <div class="introduction-img">
                 <img src="img/p3.jpg">
             </div>
         </div>
@@ -831,7 +832,7 @@
                     </div>
                 </div>
             </div>
-            <div class="Mojizat-img">
+            <div class="introduction-img">
                 <img src="img/image 2.jpg">
             </div>
         </div>
@@ -1328,11 +1329,7 @@
                             reaching Medina had the Imam alaihissalam arrested while he was engrossed in his prayers on
                             20th Shawwal 179 A.H. And Hazrat was not even allowed to bid farewell to his family members
                             before he could be dispatched to Basra. After a long journey of one month and seventeen
-                            days, the Imam Alaihissalam reached Basra on 7th Zilhajj. Hazrat was lodged in a prison over
-                            there for a year. Isa Ibne Ja’far, a cousin of Harun was the governor of Basra at that time;
-                            he recommended to Harun to release the Imam alaihissalam as he was engrossed in prayers all
-                            the time. So Harun shifted Hazrat to Baghdad and accommodated him in the prison of Fazl bin
-                            Rabi. Fazl was also impressed by the nice behavior of the Imam alaihissalam.</p>
+                            days, the Imam Alaihissalam reached Basra on 7th Zilhajj.
                         <div class="textc">
                             <p> (Narration is from the pdf book ‘Nuqush Ismat' pg. 606 :- Manaqib, Vol. 5, Pg. 68; Ilm
                                 Ul Wara, Pg. 180; Kashful Ghumma, Pg. 108; Nurul Absar, Pg. 136; Sawaneh Musa Kazim, Pg.
@@ -1343,7 +1340,7 @@
                     </div>
                 </div>
             </div>
-            <div class="Shahadats-img">
+            <div class="introduction-img">
                 <img src="img/kzim mola.jpg">
             </div>
         </div>
@@ -1397,7 +1394,7 @@
                     </div>
                 </div>
             </div>
-            <div class="merits-img">
+            <div class="introduction-img">
                 <img src="img/0kazmain.jpg">
             </div>
         </div>
@@ -1605,6 +1602,7 @@
         </div>
     </section>
 
+    
     <!--footer-->
     <footer>
         <div class="footer-content">
@@ -1613,9 +1611,9 @@
             </p>
             <ul class="socials">
                 <li><a href="#"><i class="fa fa-google"></i></a></li>
-                <li><a href="#https://www.facebook.com/MawaddatTv110/"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#www.youtube.com/c/MawaddatTV14"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="#https://www.instagram.com/mawaddat_tv/?hl=en"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#https://www.facebook.com/MawaddatTv110/"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#www.youtube.com/c/MawaddatTV14"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="#https://www.instagram.com/mawaddat_tv/?hl=en"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </div>
         <div class="footer-bottom">
